--- a/dondEducar/dondEducar/packages.config
+++ b/dondEducar/dondEducar/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="angularjs" version="1.0.7" targetFramework="net45" />
+  <package id="bootstrap" version="3.0.0" targetFramework="net45" />
   <package id="DotNetOpenAuth.AspNet" version="4.1.4.12333" targetFramework="net45" />
   <package id="DotNetOpenAuth.Core" version="4.1.4.12333" targetFramework="net45" />
   <package id="DotNetOpenAuth.OAuth.Consumer" version="4.1.4.12333" targetFramework="net45" />
@@ -9,6 +10,8 @@
   <package id="DotNetOpenAuth.OpenId.RelyingParty" version="4.1.4.12333" targetFramework="net45" />
   <package id="EntityFramework" version="5.0.0" targetFramework="net45" />
   <package id="jQuery" version="1.9.1" targetFramework="net45" />
+  <package id="jQuery" version="1.7.2" targetFramework="net45" />
+  <package id="jquery.event.drag" version="2.0.0" targetFramework="net45" />
   <package id="jQuery.UI.Combined" version="1.8.24" targetFramework="net45" />
   <package id="jQuery.Validation" version="1.10.0" targetFramework="net45" />
   <package id="knockoutjs" version="2.2.0" targetFramework="net45" />
@@ -34,6 +37,7 @@
   <package id="Modernizr" version="2.6.2" targetFramework="net45" />
   <package id="mongocsharpdriver" version="1.8.2" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="4.5.11" targetFramework="net45" />
+  <package id="SlickGrid" version="2.2.20130813" targetFramework="net45" />
   <package id="System.Spatial" version="5.2.0" targetFramework="net45" />
   <package id="Twitter.Bootstrap" version="3.0.0" targetFramework="net45" />
   <package id="WebGrease" version="1.3.0" targetFramework="net45" />
