--- a/dondEducar/dondEducar/packages.config
+++ b/dondEducar/dondEducar/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="angularjs" version="1.0.7" targetFramework="net45" />
   <package id="bootstrap" version="3.0.0" targetFramework="net45" />
+  <package id="CsvHelper" version="2.2.2" targetFramework="net45" />
   <package id="DotNetOpenAuth.AspNet" version="4.1.4.12333" targetFramework="net45" />
   <package id="DotNetOpenAuth.Core" version="4.1.4.12333" targetFramework="net45" />
   <package id="DotNetOpenAuth.OAuth.Consumer" version="4.1.4.12333" targetFramework="net45" />
