--- a/dondEducar/dondEducar/dondEducar.csproj
+++ b/dondEducar/dondEducar/dondEducar.csproj
@@ -206,8 +206,14 @@
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\fonts\glyphicons-halflings-regular.svg" />
+    <Content Include="Content\images\bg.gif" />
     <Content Include="Content\images\down.gif" />
+    <Content Include="Content\images\hbg.gif" />
     <Content Include="Content\images\header-columns-bg.gif" />
+    <Content Include="Content\images\ll_archives.gif" />
+    <Content Include="Content\images\ll_resources.gif" />
+    <Content Include="Content\images\ll_selectadesign.gif" />
+    <Content Include="Content\images\logo.gif" />
     <Content Include="Content\images\sort-asc.gif" />
     <Content Include="Content\images\sort-desc.gif" />
     <Content Include="Content\slick-default-theme.css" />
@@ -332,7 +338,7 @@
     <Content Include="Web.Release.config">
       <DependentUpon>Web.config</DependentUpon>
     </Content>
-    <Content Include="Content\Site.css" />
+    <Content Include="Content\site.css" />
     <Content Include="Scripts\_references.js" />
     <Content Include="Images\accent.png" />
     <Content Include="Images\bullet.png" />
@@ -349,7 +355,6 @@
     <Content Include="Images\orderedList9.png" />
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Home\Establecimientos.cshtml" />
-    <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
