--- a/dondEducar/dondEducar/Web.config
+++ b/dondEducar/dondEducar/Web.config
@@ -17,6 +17,7 @@
     <add key="PreserveLoginUrl" value="true" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="aspnet:UseHostHeaderForRequestUrl" value="false" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
@@ -33,6 +34,7 @@
         <add namespace="System.Web.Optimization" />
         <add namespace="System.Web.Routing" />
         <add namespace="System.Web.WebPages" />
+        <add namespace="dondEducar.Helpers" />
       </namespaces>
     </pages>
   </system.web>
